--- a/capacitor.config.json
+++ b/capacitor.config.json
@@ -1,5 +1,5 @@
 {
-	"appId": "io.ionic.starter",
+	"appId": "com.shaggy.movies",
 	"appName": "Movies",
 	"webDir": "www",
 	"bundledWebRuntime": false
